# dominai

./: .gitignore  README.md  prompt.txt  pyproject.toml
checkpoints/run01/: ep_0005000.pt  ep_0010000.pt  ep_0015000.pt  ep_0020000.pt  ep_0025000.pt  ep_0030000.pt  ep_0035000.pt  latest.pt
config/: game_block.yaml  game_draw.yaml  training.yaml
domino/: __init__.py
domino/agents/: __init__.py  base.py  dqn_agent.py  heuristic_agent.py  random_agent.py  variety_agent.py
domino/cli/: play.py  train.py
domino/core/: __init__.py  encoding.py  game.py  piece.py  rules.py
domino/gui/: board_widget.py  hand_widget.py  main_window.py  piece_widget.py
domino/models/: __init__.py  base.py  mlp.py  registry.py  resnet.py
domino/training/: __init__.py  checkpoint.py  replay_buffer.py  trainer.py
tests/: test_board_widget.py  test_encoding.py  test_rules.py  test_trainer_smoke.py  test_variety_agent.py
